examples/test/testpolicy14325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14325
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key11: value32
      key0: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value34
          key24: value29
          key7: value21
      podSelector:
        matchLabels:
          key1: value33
